[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
remebers = ["learn_axum", "learn_actix", "hello-tokio"]

[dependencies]
serde = {version = "1.0.186", features = ["derive"]}
serde_json = "1.0"