[package]
name = "hello-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version ="0.11", feature=["blocking", "json"]}
tokio = { version = "1", features = ["full"] }
uuid = "1.3.3"
