[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["learn_uuid","learn_axum", "learn_actix", "learn_reqwest", "learn_arboard", "learn_serde"]



[dependencies]
serde = {version = "1.0.186", features = ["derive"]}
serde_json = "1.0"

chrono = "0.4.35"
