[package]
name = "learn_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = { version = "3.1.0", features = ["base64"] }

tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.5"
uuid = {version = "1.9.1", features = ["v4", "v7", "fast-rng", "macro-diagnostics", "serde"]}
