[package]
name = "learn_chrono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.8.0", features = ["v4", "v7", "fast-rng", "macro-diagnostics"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_with = { version = "3.1.0", features = ["base64"] }

chrono = "0.4.38"
